--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+
 # some type of files
 *.csv
 *.xlsx
@@ -136,3 +137,4 @@ dmypy.json
 # forders
 output_display/
 archive/
+.idea/
